<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.sliknisi.fragments.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/achievementsFragment"
        android:name="com.example.sliknisi.fragments.AchievementsFragment"
        android:label="@string/nav_achievements" />

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.sliknisi.fragments.MapFragment"
        android:label="@string/nav_map" />

    <fragment
        android:id="@+id/addFragment"
        android:name="com.example.sliknisi.fragments.AddFragment"
        android:label="@string/nav_add" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.sliknisi.fragments.ProfileFragment"
        android:label="@string/nav_profile" />

</navigation>