<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/achievementsFragment"
        android:icon="@drawable/ic_trophy"
        android:title="@string/nav_achievements" />

    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_map"
        android:title="@string/nav_map" />

    <item
        android:id="@+id/placeholder"
        android:enabled="false"
        android:title=""
        android:visible="true" />

    <item
        android:id="@+id/addFragment"
        android:icon="@drawable/ic_add"
        android:title="@string/nav_add" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>