<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/add_landmark_title"
            android:textSize="@dimen/text_size_xlarge"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_label_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/labelLandmarkName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_small"
            android:text="@string/landmark_name"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBaseline_toBaselineOf="@id/etLandmarkName"
            app:layout_constraintEnd_toStartOf="@id/guideline_label_end"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etLandmarkName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="32dp"
            android:hint="@string/landmark_name"
            android:inputType="text"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_label_end"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/labelDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_small"
            android:text="@string/landmark_description"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBaseline_toBaselineOf="@id/etDescription"
            app:layout_constraintEnd_toStartOf="@id/guideline_label_end"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="260dp"
            android:layout_height="51dp"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/landmark_description"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_label_end"
            app:layout_constraintTop_toBottomOf="@id/etLandmarkName" />

        <TextView
            android:id="@+id/labelAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_small"
            android:text="@string/landmark_address"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBaseline_toBaselineOf="@id/etAddress"
            app:layout_constraintEnd_toStartOf="@id/guideline_label_end"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/landmark_address"
            android:inputType="text"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_label_end"
            app:layout_constraintTop_toBottomOf="@id/etDescription" />

        <TextView
            android:id="@+id/labelCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_small"
            android:text="@string/landmark_city"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBaseline_toBaselineOf="@id/etCity"
            app:layout_constraintEnd_toStartOf="@id/guideline_label_end"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/landmark_city"
            android:inputType="text"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_label_end"
            app:layout_constraintTop_toBottomOf="@id/etAddress" />

        <TextView
            android:id="@+id/labelLatitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_small"
            android:text="@string/landmark_latitude"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBaseline_toBaselineOf="@id/etLatitude"
            app:layout_constraintEnd_toStartOf="@id/guideline_label_end"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etLatitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/landmark_latitude"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_label_end"
            app:layout_constraintTop_toBottomOf="@id/etCity" />

        <TextView
            android:id="@+id/labelLongitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_small"
            android:text="@string/landmark_longitude"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBaseline_toBaselineOf="@id/etLongitude"
            app:layout_constraintEnd_toStartOf="@id/guideline_label_end"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etLongitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/landmark_longitude"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_label_end"
            app:layout_constraintTop_toBottomOf="@id/etLatitude" />

        <TextView
            android:id="@+id/labelPoints"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_small"
            android:text="@string/landmark_points_label"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBaseline_toBaselineOf="@id/etPoints"
            app:layout_constraintEnd_toStartOf="@id/guideline_label_end"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etPoints"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/landmark_points_label"
            android:inputType="number"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_label_end"
            app:layout_constraintTop_toBottomOf="@id/etLongitude" />

        <TextView
            android:id="@+id/labelCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_small"
            android:text="@string/landmark_category"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toBottomOf="@id/spinnerCategory"
            app:layout_constraintEnd_toStartOf="@id/guideline_label_end"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/spinnerCategory"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_label_end"
            app:layout_constraintTop_toBottomOf="@id/etPoints" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:backgroundTint="@color/primary"
            android:text="@string/action_save"
            android:textColor="@color/text_on_primary"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerCategory" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:backgroundTint="@color/accent"
            android:text="@string/action_cancel"
            android:textColor="@color/text_on_primary"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSave" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
